- Fixed bug with INET6 and find_tkline_zap (..)
- Fixed include bug
- Created StripControlCodes() and call it from stripbadwords() to fix bug 552
- Made 3 param TKL funcs Perm with reason instead of timed with no reason
- Added set::snomask-on-oper to set the default snomask when users /oper (oper::snomask
  overrides this)
- Fixed a bug reported by AngryWolf where setting umode -o didn't remove umode
  h. (#0000556)
- Added a pretty_time_val function, this converts a number such as 86400 to "1 day"
  to make it easier to read.
- Fixed a bug in the binary search functions that could cause crashes when unknown config
  directives were added. Reported by 1of10 (#0000587)
- Fixed a bug at synch time that could cause more parameters to be sent than should be
- Fixed a TKL bug where leaving out the reason caused a crash (reported by Ravage)
- Added the ability to specify port ranges, for example listen *:6660-6669; listens
  on ports 6660, 6661, ... 6669. Suggested by Krisztian Romek
- Removed USE_LONGMODE, if it was #undef'ed problems could occur, so there is no reason to
  have it if it doesn't to anything.
- Fixed a bug where leaving out a value for certain config directives would cause a crash,
  reported by AngryWolf (#0000596)
- Fixed whole bunch of users in empty channel bug (probably)
- Added a patch by Syzop to increase the "randomness" of well... the random numbers
- Fixed a bug in the empty channel fix
- Fixed a bug in the random patch under win32
- Added a suggestion by AngryWolf to generate an error if a link::password-connect
  is specified as encrypted. (#0000597)
- Fixed bug #0000601 reported by cate where specifying just a :port number for set::scan::endpoint 
  caused a seg fault.
- Added some patches by Syzop to fix a variety of different bugs
- Added some bugfixes for IPv6 and others by Syzop
- Fixed a bug where leaving out the parameter to a password config entry would cause a
  crash, reported by AngryWolf (#0000623)