@@ -100,6 +100,10 @@ extern int		completed_connection(aClient *);
 extern void clear_unknown();
 extern EVENT(tkl_check_expire);
 extern EVENT(e_unload_module_delayed);
+#ifdef THROTTLING
+extern EVENT(e_clean_out_throttling_buckets);
+#endif
+
 extern void  module_loadall(int module_load);
 extern long set_usermode(char *umode);
 extern char *get_modestr(long umodes);
